# libscsicmd

./: .gitignore  CMakeLists.txt  README.md
afl/testcase/: id:000006,src:000504,op:ext_AO,pos:22  id:000007,src:000504,op:ext_AO,pos:32  id:000010,src:000547,op:ext_AO,pos:30  id:000011,src:000547,op:ext_AO,pos:32  id:000012,src:000563,op:ext_AO,pos:31  log_sense_0c0fe33c48468f5b89f1c7315f7e55dabac3481a.csv  log_sense_e987c846782a969f2786eb64e5ce751f10b2161b.csv  log_sense_eaf8bc4deb09eadd1c294aa94b1b32d246bc2268.csv
include/: ata.h  ata_parse.h  ata_smart.h  parse_extended_inquiry.h  parse_log_sense.h  parse_mode_sense.h  parse_read_defect_data.h  parse_receive_diagnostics.h  scsicmd.h  scsicmd_utils.h  smartdb.h
smartdb/: smartdb.h  smartdb.xml  smartdb_gen_c.py
src/: CMakeLists.txt  ata.c  ata_smart.c  cdb.c  log_sense.c  parse_inquiry.c  parse_read_cap.c  parse_sense.c
src/smartdb/: smartdb.xml
structs/: ata_identify.yaml  ata_struct_2_c_dump.py  ata_struct_2_h.py  update-asc-num
test/: CMakeLists.txt  ata_smart_read_data.c  collect_raw_data.c  main.c  main.h  parse_scsi.c  parse_scsi_log_sense.c  scsi_inquiry.c  scsi_log_sense.c  scsi_mode_sense.c  scsi_receive_diagnostics.c
